--- a/nodeServer/public/index.html
+++ b/nodeServer/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <title>i chat - realtime node socket.io chat app </title>
     <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/client.js"></script>
+    <script defer src="js/index.js"></script>
 </head>
+
 <body>
     <nav>
         <img class="logo" src="chat.jpg">
@@ -24,4 +26,5 @@
         </form>
     </div>
 </body>
+
 </html>
